// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ebay-item-tile-group > renders default 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"layout-grid item-tile-group"[39m
  [36m>[39m
    [36m<ul>[39m
      [36m<li>[39m
        [36m<div[39m
          [33mclass[39m=[32m"item-tile"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__header"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"file-preview-card"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"file-preview-card__body"[39m
              [36m>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [36m<img[39m
                    [33malt[39m=[32m"file-name.jpg"[39m
                    [33mclass[39m=[32m"file-preview-card__asset"[39m
                    [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c01/skin/docs/tb-real-square-pic.jpg"[39m
                  [36m/>[39m
                [36m</a>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"file-preview-card__action icon-btn"[39m
                  [33mdata-ebayui[39m=[32m""[39m
                  [33mtype[39m=[32m"button"[39m
                [36m>[39m
                  [36m<svg[39m
                    [33maria-hidden[39m=[32m"true"[39m
                    [33mclass[39m=[32m"icon icon--16"[39m
                    [33mfocusable[39m=[32m"false"[39m
                  [36m>[39m
                    [36m<defs>[39m
                      [36m<symbol[39m
                        [33mid[39m=[32m"icon-heart-16"[39m
                        [33mviewBox[39m=[32m"0 0 16 16"[39m
                      [36m>[39m
                        [36m<path[39m
                          [33mclip-rule[39m=[32m"evenodd"[39m
                          [33md[39m=[32m"M8 2.536a6.136 6.136 0 0 0-1.448-1.053A4.409 4.409 0 0 0 4.5 1c-1.55 0-2.709.634-3.461 1.554C.31 3.443 0 4.55 0 5.5c0 .918.348 1.711.704 2.292.36.586.77 1.023.978 1.237 4.193 4.327 4.91 5.011 5.624 5.691a.996.996 0 0 0 1.388 0c.714-.68 1.43-1.364 5.624-5.69a7.23 7.23 0 0 0 .978-1.238c.356-.58.704-1.374.704-2.292 0-.95-.312-2.057-1.039-2.946C14.21 1.634 13.05 1 11.5 1c-.625 0-1.311.107-2.052.483-.48.244-.96.588-1.448 1.053Zm-.778 2.093c-.635-.753-1.155-1.15-1.574-1.362A2.412 2.412 0 0 0 4.5 3c-.95 0-1.541.366-1.914.82A2.73 2.73 0 0 0 2 5.5c0 .415.161.842.409 1.246.245.398.535.711.71.891 2.97 3.065 4.183 4.289 4.881 4.974.698-.685 1.912-1.91 4.882-4.974.174-.18.464-.493.71-.891.247-.404.408-.83.408-1.246a2.73 2.73 0 0 0-.586-1.68C13.04 3.367 12.45 3 11.5 3c-.375 0-.739.06-1.148.267-.42.213-.94.609-1.574 1.362a.998.998 0 0 1-1.208.274.994.994 0 0 1-.348-.274Z"[39m
                          [33mfill-rule[39m=[32m"evenodd"[39m
                        [36m/>[39m
                      [36m</symbol>[39m
                    [36m</defs>[39m
                    [36m<use[39m
                      [33mhref[39m=[32m"#icon-heart-16"[39m
                    [36m/>[39m
                  [36m</svg>[39m
                [36m</button>[39m
              [36m</div>[39m
            [36m</div>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__body"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-primary"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"signal signal--time-sensitive"[39m
              [36m>[39m
                [0mTime Sensitive[0m
              [36m</span>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-secondary"[39m
            [36m>[39m
              [36m<a[39m
                [33mclass[39m=[32m"item-tile__title"[39m
                [33mhref[39m=[32m"https://ebay.com"[39m
              [36m>[39m
                [0mApple iPhone 11 Pro Max[0m
              [36m</a>[39m
              [36m<div[39m
                [33mclass[39m=[32m"item-tile__subtitle"[39m
              [36m>[39m
                [0m256GB Space Gray[0m
              [36m</div>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-tertiary"[39m
            [36m>[39m
              [36m<p[39m
                [33mclass[39m=[32m"price"[39m
              [36m>[39m
                [0m$29.99 [0m
                [36m<span[39m
                  [33mclass[39m=[32m"clipped"[39m
                [36m>[39m
                  [0m Was: [0m
                [36m</span>[39m
                [36m<s[39m
                  [33mclass[39m=[32m"list-price"[39m
                [36m>[39m
                  [0m $68.99 [0m
                [36m</s>[39m
              [36m</p>[39m
              [36m<p>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [0m Buy it now [0m
                [36m</a>[39m
              [36m</p>[39m
              [36m<p>[39m
                [0mFree shipping[0m
              [36m</p>[39m
              [36m<p>[39m
                [0mSponsored[0m
              [36m</p>[39m
            [36m</div>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<div[39m
          [33mclass[39m=[32m"item-tile"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__header"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"file-preview-card"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"file-preview-card__body"[39m
              [36m>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [36m<img[39m
                    [33malt[39m=[32m"file-name.jpg"[39m
                    [33mclass[39m=[32m"file-preview-card__asset"[39m
                    [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c01/skin/docs/tb-real-square-pic.jpg"[39m
                  [36m/>[39m
                [36m</a>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"file-preview-card__action icon-btn"[39m
                  [33mdata-ebayui[39m=[32m""[39m
                  [33mtype[39m=[32m"button"[39m
                [36m>[39m
                  [36m<svg[39m
                    [33maria-hidden[39m=[32m"true"[39m
                    [33mclass[39m=[32m"icon icon--16"[39m
                    [33mfocusable[39m=[32m"false"[39m
                  [36m>[39m
                    [36m<use[39m
                      [33mhref[39m=[32m"#icon-heart-16"..."
`;

exports[`ebay-item-tile-group > renders with layout=list 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"layout-grid item-tile-group item-tile-group--list-view"[39m
  [36m>[39m
    [36m<ul>[39m
      [36m<li>[39m
        [36m<div[39m
          [33mclass[39m=[32m"item-tile item-tile--list-view"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__header"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"file-preview-card"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"file-preview-card__body"[39m
              [36m>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [36m<img[39m
                    [33malt[39m=[32m"file-name.jpg"[39m
                    [33mclass[39m=[32m"file-preview-card__asset"[39m
                    [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c01/skin/docs/tb-real-square-pic.jpg"[39m
                  [36m/>[39m
                [36m</a>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"file-preview-card__action icon-btn"[39m
                  [33mdata-ebayui[39m=[32m""[39m
                  [33mtype[39m=[32m"button"[39m
                [36m>[39m
                  [36m<svg[39m
                    [33maria-hidden[39m=[32m"true"[39m
                    [33mclass[39m=[32m"icon icon--16"[39m
                    [33mfocusable[39m=[32m"false"[39m
                  [36m>[39m
                    [36m<defs>[39m
                      [36m<symbol[39m
                        [33mid[39m=[32m"icon-heart-16"[39m
                        [33mviewBox[39m=[32m"0 0 16 16"[39m
                      [36m>[39m
                        [36m<path[39m
                          [33mclip-rule[39m=[32m"evenodd"[39m
                          [33md[39m=[32m"M8 2.536a6.136 6.136 0 0 0-1.448-1.053A4.409 4.409 0 0 0 4.5 1c-1.55 0-2.709.634-3.461 1.554C.31 3.443 0 4.55 0 5.5c0 .918.348 1.711.704 2.292.36.586.77 1.023.978 1.237 4.193 4.327 4.91 5.011 5.624 5.691a.996.996 0 0 0 1.388 0c.714-.68 1.43-1.364 5.624-5.69a7.23 7.23 0 0 0 .978-1.238c.356-.58.704-1.374.704-2.292 0-.95-.312-2.057-1.039-2.946C14.21 1.634 13.05 1 11.5 1c-.625 0-1.311.107-2.052.483-.48.244-.96.588-1.448 1.053Zm-.778 2.093c-.635-.753-1.155-1.15-1.574-1.362A2.412 2.412 0 0 0 4.5 3c-.95 0-1.541.366-1.914.82A2.73 2.73 0 0 0 2 5.5c0 .415.161.842.409 1.246.245.398.535.711.71.891 2.97 3.065 4.183 4.289 4.881 4.974.698-.685 1.912-1.91 4.882-4.974.174-.18.464-.493.71-.891.247-.404.408-.83.408-1.246a2.73 2.73 0 0 0-.586-1.68C13.04 3.367 12.45 3 11.5 3c-.375 0-.739.06-1.148.267-.42.213-.94.609-1.574 1.362a.998.998 0 0 1-1.208.274.994.994 0 0 1-.348-.274Z"[39m
                          [33mfill-rule[39m=[32m"evenodd"[39m
                        [36m/>[39m
                      [36m</symbol>[39m
                    [36m</defs>[39m
                    [36m<use[39m
                      [33mhref[39m=[32m"#icon-heart-16"[39m
                    [36m/>[39m
                  [36m</svg>[39m
                [36m</button>[39m
              [36m</div>[39m
            [36m</div>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__body"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-primary"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"signal signal--time-sensitive"[39m
              [36m>[39m
                [0mTime Sensitive[0m
              [36m</span>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-secondary"[39m
            [36m>[39m
              [36m<a[39m
                [33mclass[39m=[32m"item-tile__title"[39m
                [33mhref[39m=[32m"https://ebay.com"[39m
              [36m>[39m
                [0mApple iPhone 11 Pro Max[0m
              [36m</a>[39m
              [36m<div[39m
                [33mclass[39m=[32m"item-tile__subtitle"[39m
              [36m>[39m
                [0m256GB Space Gray[0m
              [36m</div>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"item-tile__section-tertiary"[39m
            [36m>[39m
              [36m<p[39m
                [33mclass[39m=[32m"price"[39m
              [36m>[39m
                [0m$29.99 [0m
                [36m<span[39m
                  [33mclass[39m=[32m"clipped"[39m
                [36m>[39m
                  [0m Was: [0m
                [36m</span>[39m
                [36m<s[39m
                  [33mclass[39m=[32m"list-price"[39m
                [36m>[39m
                  [0m $68.99 [0m
                [36m</s>[39m
              [36m</p>[39m
              [36m<p>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [0m Buy it now [0m
                [36m</a>[39m
              [36m</p>[39m
              [36m<p>[39m
                [0mFree shipping[0m
              [36m</p>[39m
              [36m<p>[39m
                [0mSponsored[0m
              [36m</p>[39m
            [36m</div>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<div[39m
          [33mclass[39m=[32m"item-tile item-tile--list-view"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"item-tile__header"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"file-preview-card"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"file-preview-card__body"[39m
              [36m>[39m
                [36m<a[39m
                  [33mhref[39m=[32m"https://ebay.com"[39m
                [36m>[39m
                  [36m<img[39m
                    [33malt[39m=[32m"file-name.jpg"[39m
                    [33mclass[39m=[32m"file-preview-card__asset"[39m
                    [33msrc[39m=[32m"https://ir.ebaystatic.com/cr/v/c01/skin/docs/tb-real-square-pic.jpg"[39m
                  [36m/>[39m
                [36m</a>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"file-preview-card__action icon-btn"[39m
                  [33mdata-ebayui[39m=[32m""[39m
                  [33mtype[39m=[32m"button"[39m
                [36m>[39m
                  [36m<svg[39m
                    [33maria-hidden[39m=[32m"true"[39m
                    [33mclass[39m=[32m"icon icon--16"[39m
                    [33mfocusable[39m=[32m"false"[39m
                  [36m>[39m
                    [36m..."
`;
